...
        <variable
            name="listener"
            type="edu.hm.cs.ma.todoguru.task.list.TaskAdapter.Listener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="@{(view) -> listener.onUpdateClick(wrapper.task)}">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/selected_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorSecondary"
            android:checked="@{wrapper.selected}"
            android:onClick="@{(view) -> listener.onCheckBoxClick(wrapper)}"
            app:layout_constraintBottom_toBottomOf="parent"
...
