<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_tasks"
        android:contentDescription="@string/delete_tasks_long"
        android:icon="@drawable/ic_delete_all_24dp"
        android:title="@string/delete_tasks_short"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mark_tasks_as_done"
        android:contentDescription="@string/mark_as_done_long"
        android:icon="@drawable/ic_done_all_24px"
        android:title="@string/mark_as_done_short"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/completed_tasks"
        android:contentDescription="@string/complete_list"
        android:title="@string/complete" />

    <item
        android:id="@+id/recommend_app"
        android:contentDescription="@string/recommend_app_description"
        android:title="@string/recommend_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/privacy_policy"
        android:contentDescription="@string/privacy_policy_description"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/contact_developers"
        android:contentDescription="@string/contact_developers_description"
        android:title="@string/contact_developers"
        app:showAsAction="never" />

</menu>